# ansible-galaxy-outdated

./: .editorconfig  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
src/ansible_galaxy_outdated/: __init__.py
src/ansiblegalaxyoutdated/: __init__.py
tests/: test__init__.py
