[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-galaxy-outdated"
description = "Shows latest version for currently install Ansible collections"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "COPYING"}
authors = [
  { name = "Christian Loos", email = "cloos@netsandbox.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
   " Topic :: Utilities",
]

[project.scripts]
ansible-galaxy-outdated = "ansiblegalaxyoutdated:main"

[project.urls]
Documentation = "https://github.com/netsandbox/ansible-galaxy-outdated"
Homepage = "https://github.com/netsandbox/ansible-galaxy-outdated"
Issues = "https://github.com/netsandbox/ansible-galaxy-outdated/issues"
Source = "https://github.com/netsandbox/ansible-galaxy-outdated"

[tool.black]
line-length = 160

[tool.setuptools_scm]
